Make sure 'Async-' implementations are Reactive